added fruit controller

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<!-- views/index.ejs -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,5 +10,7 @@
   <body>
     <h1>Welcome to the Fruits app!</h1>
     <p>An app for collecting your favorite fruits.</p>
+    <a href="/fruits">Browse Fruits</a>
+
   </body>
 </html>
